# chachacha

./: .gitignore  README.md  decrypt.js  encrypt.js  index.js  package-lock.json  package.json
rust/: Cargo.toml  LICENSE
rust/src/: byte_utils.rs  chacha20.rs  chacha20poly1305rfc.rs  poly1305.rs
test/: test_decrypt.js  test_encrypt.js
